fixed align item issues

--- a/client/src/assets/stylesheets/splash.css
+++ b/client/src/assets/stylesheets/splash.css
@@ -61,6 +61,7 @@
   background-color: #FF9933;
   border-radius: 500px;
   cursor: pointer;
+  align-items: center;
 }
 
 .demo-button:hover {
